# TermReactionDiffusion

./: CMakeLists.txt  README.md
src/: app  compile.sh  kernel.cu  main.cpp  main.cu  rd_cuda.cu  rd_cuda.h
